contact-form field spacing fix

--- a/css/contact.styl
+++ b/css/contact.styl
@@ -150,11 +150,12 @@
 				max-width 50em
 				.contact-info
 					flex-flow row
-					margin 0.8em auto
+					margin 0.8em 0
 					label
-						flex 50%
+						flex 100%
 						margin auto 1em 0em
 						input
+							display flex
 							margin-top 0.2em
 				label
 					margin 0.8em 1em
